--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # ---- Server ----
-server.port=5000
+server.port=8080
 server.error.include-message=always
 
 # ---- Postgres ----
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database=POSTGRESQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/Auditory_schedule
-spring.datasource.username=Scheduler
+spring.datasource.url=jdbc:postgresql://localhost:5432/cookbook
+spring.datasource.username=CookbookUser
 spring.datasource.password=159357
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
