--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,11 @@ server.error.include-message=always
 # ---- Postgres ----
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database=POSTGRESQL
-spring.datasource.url=jdbc:postgresql://localhost:5433/cookBook
-spring.datasource.username=cook_book_user
-spring.datasource.password=130263
+spring.datasource.url=jdbc:postgresql://localhost:5432/cookbook
+spring.datasource.username=CookbookUser
+spring.datasource.password=159357
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
