--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ server.error.include-message=always
 # ---- Postgres ----
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database=POSTGRESQL
-spring.datasource.url=jdbc:postgresql://localhost:5433/cookBook
-spring.datasource.username=cook_book_user
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
 spring.datasource.password=130263
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
