--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,21 @@
-# ---- Server ----
-server.port=5000
-server.error.include-message=always
+## ---- Server ----
+#server.port=5000
+#server.error.include-message=always
 
 # ---- Postgres ----
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.jpa.database=POSTGRESQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://cookbook-db:5432/cookbookDB
+spring.datasource.username=user
 spring.datasource.password=130263
+
+# This will show us sql requests
 spring.jpa.show-sql=true
+
+#Data base initialization (ddl)
 spring.jpa.generate-ddl=true
+
+#It defines, how generate rows and sequence identification when @GeneratedValue used
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+#This let us read and use sql operators from data.sql file
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.initialization-mode=always
